Add controller settings view
